@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }


class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + getInstance():HeroAircraft
}

AbstractAircraft <|-- HeroAircraft
HeroAircraft <-- HeroAircraft
note right of HeroAircraft::getInstance
  private static HeroAircraft instance = new HeroAircraft(...);
    public static HeroAircraft getInstance(){
          return instance;
      }
end note

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- MobEnemy

class EliteEnemy{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- EliteEnemy

class AdvancedEnemy{
     + AdvancedEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
     + forward():void
     + shoot():List<BaseBullet>
}
AbstractAircraft <|-- AdvancedEnemy

class HeroEnemy{
    + HeroEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- HeroEnemy

class BossEnemy{
     + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
     + forward():void
     + shoot():List<BaseBullet>
}
AbstractAircraft <|-- BossEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}
BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

abstract class AbstractSupply
{
    - Number:int
    + AbstractSupply(int locationX, int locationY, int speedX, int speedY)
    +effect():void
}

class BloodSupply{
    + BloodSupply(int locationX, int locationY, int speedX, int speedY, int number)
}
AbstractSupply <|-- BloodSupply

class FireSupply{
    + BloodSupply{int locationX, int locationY, int speedX, int seedY, int number)
}
AbstractSupply <|-- FireSupply

class FirePlusSupply{
    + FirePlusSupply(int locationX, int locationY, int speedX, int speedY, int number)
}
AbstractSupply <|-- FirePlusSupply

class BombSupply{
    +BombSupply(int locationX, int locationY, int speedX, int speedY, int number)
}
AbstractSupply <|-- BombSupply

class FreezeSupply{
    +FreezeSupply(int locationX, int locationY, int speedX, int speedY, int number)
}
AbstractSupply <|-- FreezeSupply

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractSupply

@enduml